# ModelingFullShells

Full3DSystem/: .gitignore  CMakeLists.txt  build.sh
Full3DSystem/include/: elastic_problem.h  read_file.h
Full3DSystem/src/: elastic_problem.cpp  main.cpp  read_file.cpp
